Enable agents that require rules. Increase sampling frequency. Fix schema to pass rule validation. Patch the schema to pass rule validation. Run the comparison test for newly activated agents. Update incorrect attribute in queries. Correct the name in the schema. fix a bunch of stuff fix attribute hierarchies and produce employment and friendships successfully Update grakn dep.

--- a/config/config_test.yml
+++ b/config/config_test.yml
@@ -1,52 +1,52 @@
 agents:
   # For each agent select a `mode`, `RUN` to run without tracing, `TRACE` to run with tracing, and `OFF` to not run at all
   - name: "marriage"
-    mode: OFF # no because of not
+    mode: TRACE
   - name: "personBirth"
     mode: TRACE # yes
   - name: "ageUpdate"
     mode: OFF # until we have macro functions
   - name: "parentship"
-    mode: OFF # no because of not
+    mode: TRACE
   - name: "relocation"
-    mode: OFF # no
+    mode: TRACE # no
   - name: "company"
     mode: TRACE  # yes
   - name: "employment"
-    mode: OFF  # no
+    mode: TRACE  # no
   - name: "product"
     mode: TRACE # yes
   - name: "transaction"
     mode: TRACE # yes
   - name: "friendship"
-    mode: OFF # no
+    mode: TRACE # no
   - name: "meanWage"
     mode: OFF # no because we lack aggregate queries
   - name: "findLivedIn"
     mode: OFF # no
   - name: "findCurrentResidents"
-    mode: OFF # no
+    mode: OFF # requires residency is-current, which requires negation in rules
   #  - name: "findTransactionCurrency" # no, already disabled as it times out
   #    mode: TRACE
   - name: "arbitraryOneHop"
     mode: TRACE # yes
   - name: "twoHop"
-    mode: OFF # no, because of parentship
+    mode: TRACE # no, because of parentship
   - name: "threeHop"
     mode: OFF # no because of employment
   - name: "fourHop"
     mode: OFF # no because of employment
   - name: "findSpecificMarriage"
-    mode: OFF # no because of not
+    mode: TRACE # no because of not
   - name: "findSpecificPerson"
     mode: TRACE # yes
 
 traceSampling:
   # Options: `"every"` for every K traces; `"log"` for logarithm with base N
   function: "every"
-  arg: 10
+  arg: 1
 
 randomSeed: 1
-iterations: 100
+iterations: 8
 scaleFactor: 3
 databaseName: "world"
