--- a/.grabl/automation.yml
+++ b/.grabl/automation.yml
@@ -65,6 +65,7 @@ build:
         sudo update-java-alternatives --jre --set java-1.11.0-openjdk-amd64
         echo 'dbms.connector.bolt.listen_address=0.0.0.0:7687' | sudo tee -a /etc/neo4j/neo4j.conf
         echo 'dbms.security.auth_enabled=false' | sudo tee -a /etc/neo4j/neo4j.conf
+        echo 'dbms.recovery.fail_on_missing_files=false' sudo tee -a /etc/neo4j/neo4j.conf
         sudo systemctl restart neo4j
         export GRABL_EXPORT_TEST_COMPARISON_NEO4J_URI="${HOSTNAME}:7687"
       monitor: |
